--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -6,7 +6,7 @@
     android:layout_height="150dp" >
 
     <ImageView
-        android:id="@+id/largeSongArtwork"
+        android:id="@+id/artwork"
         android:layout_width="150dp"
         android:layout_height="150dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,7 +49,6 @@
     </GridLayout>
 
     <LinearLayout
-        android:id="@+id/largeInfo"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_marginStart="150dp"
@@ -60,7 +59,7 @@
         app:layout_constraintEnd_toEndOf="parent" >
 
         <TextView
-            android:id="@+id/largeTitle"
+            android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
@@ -69,7 +68,7 @@
             android:textColor="?attr/colorOnSurface" />
 
         <TextView
-            android:id="@+id/largeSubtitle"
+            android:id="@+id/subtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:singleLine="true"
@@ -77,7 +76,7 @@
             android:textColor="@color/onSurface60" />
 
         <TextView
-            android:id="@+id/largeSubtitle2"
+            android:id="@+id/subtitle2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:singleLine="true"
