--- a/app/src/main/res/layout/small_preview.xml
+++ b/app/src/main/res/layout/small_preview.xml
@@ -1,23 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/songPreviewLayout"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="3dp"
+    android:layout_margin="8dp"
     android:background="?attr/selectableItemBackground">
 
     <ImageView
         android:id="@+id/artwork"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
         android:contentDescription="@string/album_artwork" />
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="100dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:singleLine="true"
         android:textSize="16sp"
@@ -27,20 +26,11 @@
 
     <TextView
         android:id="@+id/subtitle"
-        android:layout_width="100dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:singleLine="true"
         android:textSize="14sp"
         android:textColor="@color/onSurface60"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title" />
-
-    <TextView
-        android:id="@+id/plays"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:singleLine="true"
-        android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/subtitle" />
 </androidx.constraintlayout.widget.ConstraintLayout>
