--- a/app/src/main/res/layout/small_preview_with_plays.xml
+++ b/app/src/main/res/layout/small_preview_with_plays.xml
@@ -1,41 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="100dp"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     android:background="?attr/selectableItemBackground">
 
     <ImageView
-        android:id="@+id/smallSongArtwork"
+        android:id="@+id/artwork"
         android:layout_width="0dp"
         android:layout_height="100dp"
         android:maxWidth="100dp"
-        android:foreground="?attr/selectableItemBackground"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:contentDescription="@string/album_artwork" />
 
     <TextView
-        android:id="@+id/smallSongTitle"
-        android:layout_width="0dp"
+        android:id="@+id/title"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:singleLine="true"
         android:textSize="16sp"
         android:textColor="?attr/colorOnSurface"
-        app:layout_constraintStart_toStartOf="@id/smallSongArtwork"
-        app:layout_constraintEnd_toEndOf="@id/smallSongArtwork"
-        app:layout_constraintTop_toBottomOf="@id/smallSongArtwork" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/artwork" />
 
     <TextView
-        android:id="@+id/smallSongArtistOrCount"
-        android:layout_width="0dp"
+        android:id="@+id/subtitle"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:singleLine="true"
         android:textSize="14sp"
         android:textColor="@color/onSurface60"
-        app:layout_constraintStart_toStartOf="@id/smallSongArtwork"
-        app:layout_constraintEnd_toEndOf="@id/smallSongArtwork"
-        app:layout_constraintTop_toBottomOf="@id/smallSongTitle" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title" />
+
+    <TextView
+        android:id="@+id/plays"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:singleLine="true"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/subtitle" />
 </androidx.constraintlayout.widget.ConstraintLayout>
