--- a/app/src/main/res/layout/scroll_recycler_view.xml
+++ b/app/src/main/res/layout/scroll_recycler_view.xml
@@ -15,5 +15,5 @@
         android:id="@+id/scrollbar"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="@id/recyclerView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
